--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         <h2>CSS</h2>
         <P>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
+        <img src="imagem/Olá Mundo.png" alt="Imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas">
+
 
 
 
