--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
     <link rel="stylesheet" href="style.css">
-
-
-
+    
 </head>
 <body>
     <header>
@@ -24,17 +22,11 @@
         <P><span class="texto-inglês">Cascading Style Sheets</span> (em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
         <img src="imagem/Olá Mundo.png" alt="Imagem com figuras geométricas ao fundo e uma figura do planeta Terra a frente, com a inscrição Olá Mundo em letras coloridas">
 
-
-
-
     </section>
 
     <footer>
         <p>Uma página desenvolvida por Alura Start</p>
-
-
-
     </footer>
-    
+    <script src="main.js"></script>
 </body>
 </html>
